# DiscordVoiceTest

./: Cargo.toml  README.md
src/: audio_io.rs  gateway.rs  main.rs  voice.rs
